Add project due date

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "react": "^16.13.1",
     "react-calendar-heatmap": "^1.8.1",
     "react-click-outside": "^3.0.1",
+    "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.0",
     "react-intl": "^4.6.9",
